# sudo-rm-rf

./: .gitignore  CMakeLists.txt  README.md  server_config
dino/: index.css  index.html  index.js  leaderboard.html  leaderboard.js
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: block_request_handler.h  boost_file_system_io.h  config_manager.h  config_parser.h  config_utils.h  crud_api_handler.h  default_score_manager.h  dispatcher.h  echo_request_handler.h  file_system_io_interface.h  health_request_handler.h  logger.h  not_found_handler.h  request_handler.h  request_handler_factory.h  router.h  score_manager.h  score_request_handler.h  score_util.h  server.h  session.h  static_request_handler.h  test_file_system_io.h  utils.h
leaderboard/: index.html  index.js
legacy/include/: config_manager.h  router.h
legacy/src/: config_manager.cc  router.cc
legacy/tests/: router_test.cc
legacy/tests/test_configs/: DuplicateListenInServerBlock.conf  InvalidRouterEntriesDuplicateServeType  assign4_full_fledged_config  assign4_full_fledged_config_concise  invalid_listen_config1
server_configs/: assign4.conf  assign6.conf  assign7.conf  assign8.conf  assign9.conf  assignssl.conf  localrun.conf
src/: block_request_handler.cc  boost_file_system_io.cc  config_manager.cc  config_parser.cc  config_utils.cc  crud_api_handler.cc  default_score_manager.cc  dispatcher.cc  echo_request_handler.cc  health_request_handler.cc  logger.cc  not_found_handler.cc  router.cc  score_request_handler.cc  score_util.cc  server.cc  server_main.cc  session.cc  static_request_handler.cc  test_file_system_io.cc  util.cc  utils.cc
static/: index.html
tests/: block_request_handler_test.cc  boost_file_system_io_test.cc  config_manager_test.cc  config_parser_test.cc  config_utils_test.cc  crud_api_handler_test.cc  default_score_manager_test.cc  dispatcher_test.cc  echo_request_handler_test.cc  expected_invalid_response.txt  expected_response.txt  health_request_handler_test.cc  integration.sh  not_found_handler_test.cc  request_handler_test.cc  router_test.cc  score_request_handler_test.cc  score_util_test.cc  server_test.cc  server_test_config  session_test.cc  static_file_outside_base.txt  static_request_handler_test.cc  utils_test.cc
tests/integration/: bad_request_test.sh  echo_request_test.sh  expected_echo_response.txt  static_html_file_test.sh  static_jpeg_file_test.sh  static_js_file_test.sh  static_png_file_test.sh  static_txt_file_test.sh  static_zip_file_test.sh  test.conf
tests/integration_tests/: assign7_test.conf  integration.sh  test.conf
tests/integration_tests/integration/: crud_create_increment_test.sh  crud_create_test.sh  crud_delete_test.sh  crud_list_test.sh  crud_retrieve_test.sh  crud_update_test.sh  echo_request_test.sh  expected_404_response.txt  expected_crud_create_increment_response.txt  expected_crud_create_response.txt  expected_crud_delete_response.txt  expected_crud_list_response.txt  expected_crud_retrieve_response.txt  expected_crud_update_response.txt  expected_echo_response.txt  expected_invalid_response.txt  multithreading_test.sh  not_found_request_test.sh  static_html_file_test.sh  static_jpeg_file_test.sh  static_js_file_test.sh  static_png_file_test.sh  static_txt_file_test.sh  static_zip_file_test.sh
tests/test_basedir/: sudo-rm-rf.js
tests/test_basedir/nested/: sudo-rm-rf.txt
tests/test_configs/: InvalidRouterEntriesDuplicateRoot.conf  UnknownKeywordInLocationBlock.conf  crossplane_config  crossplane_double_semicolon_config  crossplane_extra_start_bracket_config  crossplane_missing_end_bracket_config  crossplane_missing_quotation_mark_config  crossplane_missing_start_bracket_config  empty_block_config  escape_back_slashes_config  escape_single_quotes_config  example_config  example_config copy  invalidLocationBlock.conf  invalid_listen_config1  invalid_listen_config2  multiple_nested_blocks_config
tests/test_configs/new_configs/: invalid_block_location_block.conf  invalid_config_unknown_handler.conf  invalid_crud_location_block.conf  invalid_location_block.conf  invalid_location_statement.conf  invalid_static_location_block.conf  no_listen_statement.conf  simple_num_thread.conf  simple_port.conf  simple_port_invalid.conf  valid_certificate.conf  valid_config.conf  valid_location_block.conf
